# ai-engineer-handbook

./: README.md
handbook/ml_engineer/: MLOps.md
handbook/software_engineer/: Golang Interview.md  Golang Theory.md  Golang.md  README.md  python_at_a_glance.md  types_of_auth_tokens.md
practice/AI/machine_learning/: assumptions_linear_regression.ipynb  linear_regression.ipynb
practice/AI/pytest_learning/tests/: conftest.py  test_circle.py  test_my_functions.py  test_school.py  test_service.py  test_square.py
practice/SE/go/: force_index.go  slice.go  slice_and_pointer_2.go  slice_and_pointer_3.go
practice/SE/go/slice/: slice_and_pointer_1.go  slice_and_pointer_3.go
practice/SE/pytest/tau-intro-to-pytest/: .coverage  README.md  pyproject.toml  pytest.ini  report.html
practice/SE/pytest/tau-intro-to-pytest/stuff/: accum.py
practice/SE/pytest/tau-intro-to-pytest/tests/: test_accum.py  test_api.py  test_math.py  test_ui.py
