[project]
name = "tau-intro-to-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
    "requests>=2.33.1",
]
